add another album

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <ul>
         <li>the guess box is below the image</li>
         <li>guess only the album title and not the artist.</li>
+        <li>pick a new album by updating the <strong>album</strong> parameter in the URL (valid values are <code>0</code>, <code>1</code>, and <code>2</code>)</li>
         <li>ignore the "difficulty" slider (I mean, feel free to play with it but its under development and can be used to cheat)</li>
         <li>if you want to play again, click <strong>clear state</strong> and hit refresh</li>
         <li><strong>comming soon</strong>: you will be able to create your own squalbum and share with friends.</li>
