Move the guess box around

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       <h2>how to play</h2>
       <p>Your goal is to guess the album title! Click on squares to reveal portions of the album cover beneath. Some notes:</p>
       <ul>
-        <li>the guess box is below the image</li>
         <li>guess only the album title and not the artist.</li>
         <li>pick a new album by updating the <strong>album</strong> parameter in the URL (valid values are <code>0</code>, <code>1</code>, and <code>2</code>)</li>
         <li>ignore the "difficulty" slider (I mean, feel free to play with it but its under development and can be used to cheat)</li>
@@ -27,12 +26,13 @@
     <section>
       <hr />
     </section>
-    <canvas id="canvas" width="600" height="600"></canvas>
     <section>
       <label for="name">Album title:</label>
       <input type="text" id="album-guess" name="album-guess" minlength="1" size="40">
       <input id="album-guess-btn" type="button" value="guess!">
     </section>
+    <section><hr /></section>
+    <canvas id="canvas" width="600" height="600"></canvas>
     <section id="dialog">
     </section>
   </body>
