dialog feedback at top

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
       <input type="text" id="album-guess" name="album-guess" minlength="1" size="40">
       <input id="album-guess-btn" type="button" value="guess!">
     </section>
+    <section id="dialog"></section>
     <section><hr /></section>
     <canvas id="canvas" width="600" height="600"></canvas>
-    <section id="dialog">
-    </section>
   </body>
 </html>
