get sketch of fast-average-color

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <script src="lz-string.min.js" defer></script>
+    <script src="fast-average-color.min.js" defer></script>
     <script src="squalbum.js" defer></script>
   </head>
   <body>
