--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <dialog id="create-dialog">
       <h2>Create your own game!!</h2>
       <p>Simply paste an image URL below to generate a link for a unique game using your image!</p>
+      <p><strong>important</strong>: images from <pre>discogs.com</pre> will not work. We suggest using <a href="https://imgur.com" target="_blank">imgur.com</a>.</p>
       <form method="dialog">
         <label for="create-image-url">image URL:</label>
         <input id="create-image-url" name="create-image-url" type="url" />
