--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="fast-average-color.min.js" defer></script>
   <script src="lz-string.min.js" defer></script>
   <script src="squalbum.js" defer></script>
