--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   </section>
   <section>
-    <input id="difficulty" type="range" min="1" max="16" name="difficulty" value="8" />
+    <input id="difficulty" type="range" min="1" max="16" name="difficulty" value="12" />
     <label for="difficulty">difficulty</label>
   </section>
   <section id="admin">
@@ -69,6 +69,7 @@
     <hr />
   </section>
   <canvas id="canvas" width="600" height="600"></canvas>
+  <footer>created by <a href="https://aaronlevin.ca">aaron levin</a> and erik hinton</footer>
 </body>
 
 </html>
