Step=2 for slider

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   </section>
   <section>
-    <input id="difficulty" type="range" min="1" max="16" name="difficulty" value="12" />
+    <input id="difficulty" type="range" min="1" max="16" step="2" name="difficulty" value="12" />
     <label for="difficulty">difficulty</label>
   </section>
   <section id="admin">
