--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <h1>squalbum</h1>
+  <h1>dubble</h1>
   <section>
-    <p>Welcome to <strong>squalbum</strong>! squalbum is like <a
+    <p>Welcome to <strong>dubble</strong>! dubble is like <a
         href="https://www.powerlanguage.co.uk/wordle/">wordle</a> except with images (in this case: album covers).</p>
     <h2>how to play</h2>
     <p>Your goal is to guess the album title! Click on squares to reveal portions of the album cover beneath. Some
@@ -21,7 +21,7 @@
       <li>ignore the "difficulty" slider (I mean, feel free to play with it but its under development and can be used to
         cheat)</li>
       <li>if you want to play again, click <strong>clear state</strong> and hit refresh</li>
-      <li><strong>comming soon</strong>: you will be able to create your own squalbum and share with friends.</li>
+      <li><strong>comming soon</strong>: you will be able to create your own dubble and share with friends.</li>
     </ul>
   </section>
   <section>
@@ -51,7 +51,7 @@
 
   </section>
   <section>
-    <input id="difficulty" type="range" min="1" max="16" step="2" name="difficulty" value="12" />
+    <input id="difficulty" type="range" min="1" max="24" step="2" name="difficulty" value="12" />
     <label for="difficulty">difficulty</label>
   </section>
   <section id="admin">
