fix a few missing numrects

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <h1>dubble</h1>
   <section>
-    <p>Welcome to <strong>dubble</strong>! dubble is like <a
-        href="https://www.powerlanguage.co.uk/wordle/">wordle</a> except with images (in this case: album covers).</p>
+    <p>Welcome to <strong>dubble</strong>! dubble is like <a href="https://www.powerlanguage.co.uk/wordle/">wordle</a>
+      except with images (in this case: album covers).</p>
     <h2>how to play</h2>
     <p>Your goal is to guess the album title! Click on squares to reveal portions of the album cover beneath. Some
       notes:</p>
@@ -33,7 +33,8 @@
     <dialog id="create-dialog">
       <h2>Create your own game!!</h2>
       <p>Simply paste an image URL below to generate a link for a unique game using your image!</p>
-      <p><strong>important</strong>: images from <code>discogs.com</code> will not work. We suggest using <a href="https://imgur.com" target="_blank">imgur.com</a>.</p>
+      <p><strong>important</strong>: images from <code>discogs.com</code> will not work. We suggest using <a
+          href="https://imgur.com" target="_blank">imgur.com</a>.</p>
       <form method="dialog">
         <label for="create-image-url">image URL:</label>
         <input id="create-image-url" name="create-image-url" type="url" />
@@ -51,7 +52,7 @@
 
   </section>
   <section>
-    <input id="difficulty" type="range" min="1" max="9" step="1" name="difficulty" value="7" />
+    <input id="difficulty" type="range" min="1" max="7" step="1" name="difficulty" value="4" />
     <label for="difficulty">difficulty</label>
   </section>
   <section id="admin">
