Add marie as collaborator

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
   <hr />
-  <footer>created by <a href="https://aaronlevin.ca">aaron levin</a> and erik hinton</footer>
+  <footer>created by <a href="https://aaronlevin.ca">aaron levin</a>, erik hinton, and <a href="https://marieflanagan.com">marie flanagan</a></footer>
 </body>
 
 </html>
