use viewport units in cnavas

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <input id="album-guess-btn" type="button" value="guess!">
     </div>
     <div id="dialog-failure"></div>
-    <canvas id="canvas" width="600" height="600"></canvas>
+    <canvas id="canvas" width="600vw" height="600vh"></canvas>
   </div>
 
   <!-- modal: create your own -->
