remove sentence and fix name

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <div class="menu" data-modal="settings">(settings)</div>
     </header>
     <div class="welcome">
-      <p>welcome to <strong>dubble</strong>! dubble is <a href="https://www.powerlanguage.co.uk/wordle/">wordle</a> for
+      <p>dubble is <a href="https://www.powerlanguage.co.uk/wordle/">wordle</a> for
         album art!</p>
     </div>
     <menu class="create-your-own" data-modal="create-your-own">
-      <button id="create-image-modal-btn">Create your own!</button>
+      <button id="create-image-modal-btn">create your own!</button>
     </menu>
     <div class="guess">
       <form onsubmit="return false">
@@ -107,7 +107,7 @@
 
   <hr />
   <footer>created by <a href="https://aaronlevin.ca">aaron levin</a>, erik hinton, and <a
-      href="https://marieflanagan.com">marie flanagan</a></footer>
+      href="https://marieflanagan.com">marie leblanc flanagan</a></footer>
 </body>
 
 </html>
