actually center canvas

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="modal-container">
       <button class="modal-close modal-exit">X</button>
       <h2>how to play</h2>
-      <p>Your goal is to guess the album title! Click on squares to reveal portions of the album cover beneath. Some
+      <p>your goal is to guess the album title! click on squares to reveal portions of the album cover beneath. Some
         notes:</p>
       <ul>
         <li>guess only the album title and not the artist.</li>
@@ -97,8 +97,8 @@
   <!-- modal: success -->
   <div class="modal" id="success">
     <div class="modal-bg modal-exit"></div>
-    <div class="modal-container">
-      <p>🐢🐢🐢 !!!YOU GOT IT!!! 🛹🛹🛹</p>
+    <div class="modal-container" id="modal-container-win">
+      <h2>🐢🐢🐢 !!!YOU GOT IT!!! 🛹🛹🛹</h2>
       <p>copy the image and share your score with your friends!!</p>
       <div id="dialog"></div>
       <!--
