--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="menu" data-modal="settings">(settings)</div>
     </header>
     <div class="welcome">
-      <p>dubble is <a href="https://www.powerlanguage.co.uk/wordle/">wordle</a> for
+      <p>dubble is like <a href="https://www.powerlanguage.co.uk/wordle/">wordle</a>, but for
         album art!</p>
     </div>
     <menu class="create-your-own" data-modal="create-your-own">
