--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <label for="difficulty">difficulty</label>
       <input id="difficulty" type="range" min="1" max="7" step="1" name="difficulty" value="5" />
       <div id="admin">
+        <button id="clear-state">clear state / cheat</button>
       </div>
     </div>
   </div>
