--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <div class="modal" id="success">
     <div class="modal-bg modal-exit"></div>
     <div class="modal-container" id="modal-container-win">
-      <h2>🐢 !!!YOU GOT IT!!! 🛹</h2>
+      <h2 id="you-got-it">🐢 !!!YOU GOT IT!!! 🛹</h2>
       <div id="dialog" contenteditable="true">
         <p id="success-game-name">uncvr</p>
       </div>
