--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
         <p id="success-game-name">uncvr</p>
       </div>
       <button id="success-copy">share</button>
-      <!--
-      -->
+      <div id="time-remaining"></div>
     </div>
   </div>
 
