small update to how-to

--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
         notes:</p>
       <ul>
         <li>guess only the album title and not the artist.</li>
-        <li>ignore the "difficulty" slider (I mean, feel free to play with it but its under development and can be used
+        <li>there is a "difficulty" slider in the <em>(settings)</em> tab. Use it to make the game harder!</li>
           to
           cheat)</li>
-        <li>if you want to play again, click <strong>clear state</strong> and hit refresh</li>
+        <li>if you want to play again, click <em>(settings)</em> and then click <strong>clear state</strong></li>
+        <li>there will be bugs!! send feedback or bugs to <a href="https://twitter.com/aaronmblevin">@aaronmblevin</a></li>
       </ul>
     </div>
   </div>
