Add summary stats in text

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       <h3 id="answer"></h3>
       <div id="dialog" contenteditable="true">
         <p id="success-game-name">uncvr</p>
+        <p id="success-game-stats">24/124</p>
       </div>
       <button id="success-copy">share</button>
       <div id="time-remaining"></div>
