Add tweet share button

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         <p id="success-game-name">uncvr</p>
         <p id="success-game-stats">24/124</p>
       </div>
-      <button id="success-copy">share</button>
+      <button id="success-copy">copy</button>
+      <a id="twitter-share">tweet</a>
       <div id="time-remaining"></div>
     </div>
   </div>
