--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
     <div class="modal-container">
       <button class="modal-close modal-exit">X</button>
       <h2>how to play</h2>
-      <p>your goal is to guess the album title! click on squares to reveal portions of the album cover beneath. Some
-        notes:</p>
+      <p>your goal is to guess the album title! click on squares to reveal portions of the album cover beneath.</p>
+<br>
+      <p>Tips:</p>
       <ul>
         <li>guess only the album title and not the artist.</li>
         <li>there is a "difficulty" slider in the <em>(settings)</em> tab. Use it to make the game harder!</li>
-          to
-          cheat)</li>
         <li>if you want to play again, click <em>(settings)</em> and then click <strong>clear state</strong></li>
         <li>there will be bugs!! send feedback or bugs to <a href="https://twitter.com/aaronmblevin">@aaronmblevin</a></li>
       </ul>
