clean up instructions and settings

--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
       <h2>how to play</h2>
       <p><span id="goal">your goal is to guess the album title!</span> click on squares to reveal portions of the album cover beneath.</p>
 <br>
-      <p>Tips:</p>
-      <ul>
-        <li>guess only the album title and not the artist.</li>
-        <li>there is a "difficulty" slider in the <em>(settings)</em> tab. Use it to make the game harder!</li>
-        <li>if you want to play again, click <em>(settings)</em> and then click <strong>reset game</strong></li>
-        <li>there will be bugs!! send feedback or bugs to <a href="https://twitter.com/aaronmblevin">@aaronmblevin</a></li>
-      </ul>
+      <p>tip: guess only the album title and not the artist.</p>
+      <!-- <ul> -->
+        <!-- <li></li> -->
+        <!-- <li>there is a "difficulty" slider in the <em>(settings)</em> tab. Use it to make the game harder!</li> -->
+        <!-- <li>if you want to play again, click <em>(settings)</em> and then click <strong>reset game</strong></li> -->
+        <!-- <li>there will be bugs!! send feedback or bugs to <a href="https://twitter.com/aaronmblevin">@aaronmblevin</a></li> -->
+      <!-- </ul> -->
     </div>
   </div>
+
 
   <!-- modal: settings -->
   <div class="modal" id="settings">
@@ -87,7 +88,6 @@
       <label for="difficulty">difficulty</label>
       <input id="difficulty" type="range" min="1" max="7" step="1" name="difficulty" value="5" />
     </form>
-
       <div id="admin">
         <button id="clear-state">reset game / cheat</button>
       </div>
