update welcome message

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 <body>
   <div id="game">
     <header>
-      <div class="menu" data-modal="how-to-play" id="menu">(how-to)</div>
+      <div class="menu" data-modal="how-to-play" id="menu">(about)</div>
       <div class="title">
         <h1>UNCVR</h1>
       </div>
       <div class="menu" data-modal="settings">(settings)</div>
     </header>
     <div class="welcome">
-      <p>!uncvr is like <a href="https://www.powerlanguage.co.uk/wordle/">wordle</a>, but for
-        album art!</p>
+      <p>Guess the album title! Click a square to reveal part of the cover.</p>
     </div>
     <menu class="create-your-own" data-modal="create-your-own">
       <button id="create-image-modal-btn">create your own!</button>
@@ -64,7 +63,8 @@
     <div class="modal-bg modal-exit"></div>
     <div class="modal-container">
       <button class="modal-close modal-exit">X</button>
-      <h2>how to play</h2>
+      <h2>about</h2>
+      <p>!uncvr is like <a href="https://www.powerlanguage.co.uk/wordle/">wordle</a>, but for album art!</p>
       <p><span id="goal">your goal is to guess the album title!</span> click on squares to reveal portions of the album cover beneath.</p>
 <br>
       <p>tip: guess only the album title and not the artist.</p>
