--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="fast-average-color.min.js" defer></script>
   <script src="lz-string.min.js" defer></script>
+  <script src="constants.js" defer></script>
   <script src="squalbum.js" defer></script>
 </head>
 
