Add close button to success modal

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
   <div class="modal" id="success">
     <div class="modal-bg modal-exit"></div>
     <div class="modal-container" id="modal-container-win">
+      <button class="modal-close modal-exit">X</button>
       <h2 id="you-got-it">🐢 !!!YOU GOT IT!!! 🛹</h2>
       <h3 id="answer"></h3>
       <div id="dialog">
