--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <script src="lz-string.min.js" defer></script>
   <script src="constants.js" defer></script>
   <script src="squalbum.js" defer></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KSMWLR5R6K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-KSMWLR5R6K');
+  </script>
 </head>
 
 <body>
